--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="mine">我的</string>
 
     <string name="loading">正在加载中&#8230;</string>
+
+    <string name="login_register">登录/注册</string>
+    <string name="my_points">我的积分</string>
+    <string name="my_points_rank">积分排行</string>
+    <string name="my_collect">我的收藏</string>
+    <string name="my_share">我的分享</string>
+    <string name="my_view_history">浏览历史</string>
+    <string name="my_system_setting">系统设置</string>
+    <string name="my_about_author">关于作者</string>
+    <string name="my_open_source">开源许可</string>
 </resources>
